2010-08-04 15:51  rsbivand

	* DESCRIPTION, R/image.R, man/image.Rd: rasterImage SDI detection

2010-08-03 14:13  rsbivand

	* R/image.R, man/image.Rd: rasterImage fix for transparency and
	  single unique value rasters

2010-08-02 18:39  rsbivand

	* DESCRIPTION, R/image.R: rasterImage fix for transparency and
	  single unique value rasters

2010-07-29 00:30  edzer

	* man/: Line.Rd, Lines-class.Rd, SpatialLines-class.Rd: extended ID
	  documentation; added examples; suggestion Michael Friendly on
	  r-sig-geo

2010-07-19 21:07  rsbivand

	* DESCRIPTION, NAMESPACE, R/SpatialPolygons-displayMethods.R,
	  R/spplot.R: including polypath from graphics if available, and
	  panel.levelplot.raster

2010-07-16 16:07  rsbivand

	* R/point.in.polygon.R, R/spsample.R, ChangeLog, inst/ChangeLog:
	  two changes: pointsInPolygons and sample.Polygons hole logic

2010-07-14 16:30  rsbivand

	* R/SpatialLines-methods.R, man/Line.Rd, man/nowrapSpatialLines.Rd,
	  man/recenter-methods.Rd, ChangeLog, inst/ChangeLog: coerce ID to
	  character in Lines

2010-07-12 21:59  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2010-07-07 23:41  edzer

	* DESCRIPTION: increased version number.

2010-07-07 23:40  edzer

	* NAMESPACE: added length() S3 methods

2010-07-07 23:39  edzer

	* R/: SpatialGrid-methods.R, SpatialLinesDataFrame-methods.R,
	  SpatialPoints-methods.R, SpatialPointsDataFrame-methods.R,
	  SpatialPolygons-methods.R: added length() methods for Spatial
	  objects; small improvements to the asWKT printing.

2010-07-07 16:02  mdsumner

	* R/SpatialLines-methods.R: more consistent handling of lwd and lty
	  arguments passed to lines() by plotSpatialLines - multiple values
	  for each are now recycled as necessary

	  also added arguments lend, ljoin and lmitre for lines()

2010-07-06 18:06  edzer

	* R/SpatialLines-methods.R: changed the col recycling in
	  plot.SpatialLines; suggestion by Michael Sumner on
	  r-spatial-devel mailing list

2010-06-23 14:24  rsbivand
